--- a/src/scss/components/_how.scss
+++ b/src/scss/components/_how.scss
@@ -83,7 +83,7 @@
   position:absolute; left:var(--x); top:var(--y); transform:translate(-50%,-50%);
   width:320px; max-width:36vw; padding:24px; 
   border-radius: 12px;
-border: 1px solid var(--color-card-border, #262626);
+border: 2px solid var(--color-card-border, #262626);
 background: rgba(20, 20, 20, 0.90);
 
 /* Background Blur */
@@ -106,17 +106,31 @@ font-size: 16px;
 font-style: normal;
 font-weight: 400;
 line-height: 140%; /* 22.4px */
+transition: color 600ms ease-in-out;
 }
+
+.how-card.active p {
+    color: #f0f0f0;
+}
+
 .how-card.active{
     border-radius: 12px;
-border: 1px solid var(--color-border-hover, #4FDB5C);
+border: 2px solid var(--color-border-hover, #4FDB5C);
 background: rgba(20, 20, 20, 0.90);
+box-shadow:
+    0 0 18px rgba(0, 255, 100, 0.6),
+    0 0 36px rgba(0, 255, 100, 0.3);
 
 /* Background Blur */
     backdrop-filter: blur(6.5px);
     // opacity:1; 
     // transform:translate(-50%,-52%)
 }
+
+// .how-card.passed {
+//     // background: rgba(20, 20, 20, 0.90);
+//     background: #FFF;
+// }
 
 /* тригери скролу: по 95vh кожен, щоб кроки перемикались рівномірно */
 .how__triggers{margin-top:20vh;
