--- a/src/scss/components/_popup.scss
+++ b/src/scss/components/_popup.scss
@@ -29,6 +29,7 @@
     @media screen and (max-width: 480px) {
         padding: 16px;  
         width: 100%; 
+        height: 85%;
     }
   }
 
@@ -38,6 +39,9 @@
     right: 0;
     z-index: 1;
     user-select: none;
+    @media screen and (max-width: 480px) {
+      width: 100%;
+    }
   }
 
   .popup-bg-down {
@@ -46,6 +50,9 @@
     left: 0;
     z-index: 1;
     user-select: none;
+    @media screen and (max-width: 480px) {
+      width: 100%;
+    }
   }
 
   .popup-inner {
@@ -76,6 +83,7 @@ margin-bottom: 24px;
 z-index: 5;
 @media screen and (max-width: 480px) {
         font-size: 28px;
+        text-align: center;
 }
   }
 
@@ -92,7 +100,7 @@ line-height: 140%; /* 33.6px */
     opacity: 0.7;
     z-index: 5;
     @media screen and (max-width: 480px) {
-      font-size: 20px;   
+      font-size: 18px;   
     }
   }
   
@@ -108,6 +116,7 @@ line-height: 140%; /* 33.6px */
 
     @media screen and (max-width: 480px) {
         width: 100%;   
+        margin: 30px 0 20px 0;
     }
   }
   
@@ -161,6 +170,9 @@ text-transform: uppercase;
     display: flex;
     justify-content: center;
     margin-top: 44px;
+    @media screen and (max-width: 480px) {
+      margin-top: 20px;
+  }
   }
   
   
