--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -414,6 +414,7 @@ body.menu-open {
   .popup {
     padding: 16px;
     width: 100%;
+    height: 85%;
   }
 }
 
@@ -427,6 +428,11 @@ body.menu-open {
       -ms-user-select: none;
           user-select: none;
 }
+@media screen and (max-width: 480px) {
+  .popup-bg-up {
+    width: 100%;
+  }
+}
 
 .popup-bg-down {
   position: absolute;
@@ -437,6 +443,11 @@ body.menu-open {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+}
+@media screen and (max-width: 480px) {
+  .popup-bg-down {
+    width: 100%;
+  }
 }
 
 .popup-inner {
@@ -466,6 +477,7 @@ body.menu-open {
 @media screen and (max-width: 480px) {
   .popup h3 {
     font-size: 28px;
+    text-align: center;
   }
 }
 
@@ -484,7 +496,7 @@ body.menu-open {
 }
 @media screen and (max-width: 480px) {
   .popup p {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 
@@ -501,6 +513,7 @@ body.menu-open {
 @media screen and (max-width: 480px) {
   .popup-form {
     width: 100%;
+    margin: 30px 0 20px 0;
   }
 }
 
@@ -550,6 +563,11 @@ body.menu-open {
   display: flex;
   justify-content: center;
   margin-top: 44px;
+}
+@media screen and (max-width: 480px) {
+  .popup-wrapper {
+    margin-top: 20px;
+  }
 }
 
 /* Закрити */
@@ -1109,7 +1127,7 @@ body.menu-open {
   max-width: 36vw;
   padding: 24px;
   border-radius: 12px;
-  border: 1px solid var(--color-card-border, #262626);
+  border: 2px solid var(--color-card-border, #262626);
   background: rgba(20, 20, 20, 0.9);
   /* Background Blur */
   -webkit-backdrop-filter: blur(6.5px);
@@ -1135,12 +1153,18 @@ body.menu-open {
   font-style: normal;
   font-weight: 400;
   line-height: 140%; /* 22.4px */
+  transition: color 600ms ease-in-out;
+}
+
+.how-card.active p {
+  color: #f0f0f0;
 }
 
 .how-card.active {
   border-radius: 12px;
-  border: 1px solid var(--color-border-hover, #4FDB5C);
+  border: 2px solid var(--color-border-hover, #4FDB5C);
   background: rgba(20, 20, 20, 0.9);
+  box-shadow: 0 0 18px rgba(0, 255, 100, 0.6), 0 0 36px rgba(0, 255, 100, 0.3);
   /* Background Blur */
   -webkit-backdrop-filter: blur(6.5px);
           backdrop-filter: blur(6.5px);
@@ -1545,8 +1569,19 @@ body.menu-open {
 }
 
 @media screen and (max-width: 480px) {
-  .footer-item img {
+  .footer-logo {
+    display: none;
+  }
+}
+
+.footer-logo-mobile {
+  display: none;
+}
+@media screen and (max-width: 480px) {
+  .footer-logo-mobile {
+    display: block;
     width: 100%;
+    margin-bottom: 10px;
   }
 }
 
